# ecommerce-rag-pipeline

./: .dockerignore  .env.example  .env.test  .gitignore  DATA_PREPARATION_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  Dockerfile  LICENSE  README-spaces.md  README.md  README_FIXED_FOR_SPACES.md  SETUP_GUIDE.md  SPACE_FIX_INSTRUCTIONS.md  URGENT_FIX_SPACES.md  app.py  app_with_real_data.py  deploy_to_spaces.md  docker-compose.yml  pyproject.toml  requirements.txt  setup_github.sh  setup_secrets.sh  test_openai_api.py
.github/workflows/: ci.yml  model-sync.yml  model-training.yml  release.yml
configs/: default.yaml
data/: README.md  test_sample_1000.csv
deployment_package/: app.py  requirements.txt
scripts/: check_hf_quota.py  create_model_card.py  demo.py  run_tests.sh  setup.sh
src/: __init__.py  cli.py
src/api/: __init__.py  dependencies.py  main.py
src/data/: __init__.py  models.py  processor.py
src/embedding/: __init__.py  fine_tuning.py  fusion.py  service.py
src/rag/: __init__.py  evaluation.py  field_extraction.py  llm_client.py  prompt_builder.py  rag_pipeline.py
src/utils/: __init__.py  config.py  exceptions.py  logging.py
src/vector_db/: __init__.py  evaluation.py  faiss_service.py
tests/: conftest.py  test_api.py  test_data_processor.py  test_rag_pipeline.py  test_vector_db.py
tests/manual/: test_free_llm.py  test_free_llm_simple.py  test_hf_models.py  test_hf_simple.py  test_hf_token.py  test_llm_only.py  test_openai_direct.py
